--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4697,6 +4697,39 @@ var isPalindrome = function(head) {
 };
 ```
 
+## 235. 二叉搜索树的最近公共祖先
+
+给定一个二叉搜索树, 找到该树中两个指定节点的最近公共祖先。
+
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个结点 p、q，最近公共祖先表示为一个结点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+
+说明:
+
+所有节点的值都是唯一的。
+p、q 为不同节点且均存在于给定的二叉搜索树中。
+
+```
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} p
+ * @param {TreeNode} q
+ * @return {TreeNode}
+ */
+var lowestCommonAncestor = function(root, p, q) {
+    if(root.val===p || root.val===q){
+        
+    }
+};
+```
+
 
 
 ## 306.累加数
@@ -6484,6 +6517,46 @@ var sumOfUnique = function(nums) {
     return ans;
 };
 
+```
+
+## 1984. 学生分数的最小差值
+
+给你一个 下标从 0 开始 的整数数组 nums ，其中 nums[i] 表示第 i 名学生的分数。另给你一个整数 k 。
+
+从数组中选出任意 k 名学生的分数，使这 k 个分数间 最高分 和 最低分 的 差值 达到 最小化 。
+
+返回可能的 最小差值 。
+
+提示：
+
+1 <= k <= nums.length <= 1000
+0 <= nums[i] <= 105
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var minimumDifference = function(nums, k) {
+    if (nums.length<2) {
+        return 0;
+    }
+    nums.sort((a,b)=>a-b);  //排序
+    let mindiff=nums[nums.length-1]-nums[0];  //初始为最大差值
+    for(i=0;i<nums.length-k+1;i++){
+        let temp=nums[i+k-1]-nums[i];
+        mindiff=temp<mindiff ? temp : mindiff;
+        if (mindiff===0) {
+            return 0;
+        }
+    }
+    return mindiff;
+};
+
+let test=[9,4,1,7];
+let result=minimumDifference(test,2);
+console.log(result);
 ```
 
 
