--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4708,7 +4708,11 @@ var isPalindrome = function(head) {
 所有节点的值都是唯一的。
 p、q 为不同节点且均存在于给定的二叉搜索树中。
 
-```
+![二叉搜索树的最近公共祖先（两次遍历）](E:\pogject\学习笔记\image\leetcode\二叉搜索树的最近公共祖先（两次遍历）.png)
+
+一次遍历
+
+```js
 /**
  * Definition for a binary tree node.
  * function TreeNode(val) {
@@ -4724,10 +4728,232 @@ p、q 为不同节点且均存在于给定的二叉搜索树中。
  * @return {TreeNode}
  */
 var lowestCommonAncestor = function(root, p, q) {
-    if(root.val===p || root.val===q){
-        
+    //注意是二叉搜索
+    if (root.val<p.val && root.val<q.val) {
+        return lowestCommonAncestor(root.right,p,q);
+    }else if(root.val>p.val && root.val>q.val) {
+        return lowestCommonAncestor(root.left,p,q);
+    }else{
+        //返回的是结点
+        return root;
     }
 };
+```
+
+## 237. 删除链表中的节点
+
+请编写一个函数，用于 删除单链表中某个特定节点 。在设计函数时需要注意，你无法访问链表的头节点 head ，只能直接访问 要被删除的节点 。
+
+题目数据保证需要删除的节点 不是末尾节点 。
+
+提示：
+
+链表中节点的数目范围是 [2, 1000]
+-1000 <= Node.val <= 1000
+链表中每个节点的值都是唯一的
+需要删除的节点 node 是 链表中的一个有效节点 ，且 不是末尾节点
+
+删除链表中的节点的常见的方法是定位到待删除节点的上一个节点，修改上一个节点的 next 指针，使其指向待删除节点的下一个节点，即可完成删除操作。
+
+这道题中，传入的参数 node 为要被删除的节点，无法定位到该节点的上一个节点。注意到要被删除的节点不是链表的末尾节点，因此 node.next 不为空，可以通过对 node 和 node.next 进行操作实现删除节点。
+
+在给定节点 node 的情况下，可以通过修改 node 的 next 指针的指向，删除 node 的下一个节点。但是题目要求删除 node，为了达到删除 node 的效果，只要在删除节点之前，将 node 的节点值修改为 node.next 的节点值即可。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+/**
+ * @param {ListNode} node
+ * @return {void} Do not return anything, modify node in-place instead.
+ */
+var deleteNode = function(node) {
+    node.val=node.next.val;
+    node.next=node.next.next;
+};
+```
+
+## 242.  有效的字母异位词
+
+给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
+
+注意：若 s 和 t 中每个字符出现的次数都相同，则称 s 和 t 互为字母异位词。
+
+**进阶:** 如果输入字符串包含 unicode 字符怎么办？你能否调整你的解法来应对这种情况？
+
+使用数组计数
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {boolean}
+ */
+var isAnagram = function(s, t) {
+    if (s.length!==t.length) {
+        return false;
+    }
+    var alphas1=new Array();
+    var alphas2=new Array();
+    var counts1=new Array();
+    var counts2=new Array();
+    for (let i=0;i<s.length;i++){
+        let index1=alphas1.indexOf(s[i]);
+        let index2=alphas2.indexOf(t[i]);
+        if (index1!==-1) {
+            counts1[index1]+=1;
+        }else{
+            counts1.push(1);
+            alphas1.push(s[i]);
+        }
+        if (index2!==-1) {
+            counts2[index2]+=1;
+        }else{
+            counts2.push(1);
+            alphas2.push(t[i]);
+        }
+    }
+    if (alphas1.length!==alphas2.length) {return false;}
+    for (let i=0;i<alphas1.length;i++){
+        if (counts1[i]!==counts2[alphas2.indexOf(alphas1[i])]) {
+            return false;
+        }
+    }
+    return true;
+
+};
+
+let str1 = "anaagram";
+let str2 = "naggaram";
+let result=isAnagram(str1,str2);
+console.log(result);
+```
+
+使用对象计数
+
+
+
+## 257. 二叉树的所有路径
+
+给你一个二叉树的根节点 root ，按 任意顺序 ，返回所有从根节点到叶子节点的路径。
+
+叶子节点 是指没有子节点的节点。
+提示：
+
+树中节点的数目在范围 [1, 100] 内
+-100 <= Node.val <= 100
+
+迭代
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {string[]}
+ */
+var binaryTreePaths = function(root) {
+    root.val=[root.val];
+    let arr=[root];
+    let result=[];
+    while(arr.length>0){
+        let n=arr.length;
+        while(n>0){
+            let node=arr.shift();
+            if (node.left===null && node.right===null) {
+                result.push(node.val.join("->"));
+            }
+            if (node.left!==null) {
+                node.left.val=node.val.concat([node.left.val])
+                arr.push(node.left);
+            }
+            if (node.right!==null) {
+                node.right.val=node.val.concat([node.right.val])
+                arr.push(node.right);
+            }
+            n--;
+        }
+    }
+    return result;
+};
+```
+
+方法一：深度优先搜索    二：广度优先搜索
+
+```
+
+```
+
+## 258. 各位相加
+
+给定一个非负整数 num，反复将各个位上的数字相加，直到结果为一位数。返回这个结果。
+
+提示：
+
+0 <= num <= 231 - 1
+
+进阶：你可以不使用循环或者递归，在 O(1) 时间复杂度内解决这个问题吗？
+
+```js
+/**
+ * @param {number} num
+ * @return {number}
+ */
+var addDigits = function(num) {
+
+    while(num>9){
+        let arr=(""+num).split("");
+        num=0;
+        arr.forEach((item)=>{
+            num+=Number(item);
+        });
+        console.log(num);
+    }
+    return num;
+};
+
+let test=236;
+let result=addDigits(test);
+console.log(result);
+```
+
+对于9的倍数来说，各位和肯定是9，81=8+1=9 729=7+2+9=18=1+8=9
+
+任何数都可以表现为 9n+b b in [0,1,2,3,4,5,6,7,8]
+
+已知9n各位和为9，最后结果即为9+b
+
+最后对0做一下特殊处理
+
+```js
+/**
+ * @param {number} num
+ * @return {number}
+ */
+var addDigits = function(num) {
+    if (num===0) {
+        return 0;
+    }
+    if (num%9===0) {
+        return 9;
+    }else{
+        return num%9;
+    }
+};
+
+let test=236;
+let result=addDigits(test);
+console.log(result);
 ```
 
 
