--- a/学习记录.md
+++ b/学习记录.md
@@ -102,4 +102,8 @@ axios , js文件读取
 
 2022.02.11
 
-力扣：学生分数的最小差值
+力扣：学生分数的最小差值, 二叉搜索树的最近公共祖先(一次遍历递归)，删除链表中的节点(和下一个结点交换值)，二叉树的所有路径，各位相加
+
+2022.02.12
+
+力扣：
