--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6059,6 +6059,220 @@ const hash = (x, y) => {
 
 ```
 
+## 1020. 飞地的数量
+
+给你一个大小为 m x n 的二进制矩阵 grid ，其中 0 表示一个海洋单元格、1 表示一个陆地单元格。
+
+一次 移动 是指从一个陆地单元格走到另一个相邻（上、下、左、右）的陆地单元格或跨过 grid 的边界。
+
+返回网格中 无法 在任意次数的移动中离开网格边界的陆地单元格的数量。
+
+来提示：
+
+m == grid.length
+n == grid[i].length
+1 <= m, n <= 500
+grid[i][j] 的值为 0 或 1
+
+方法一：深度优先搜索
+根据飞地的定义，如果从一个陆地单元格出发无法移动到网格边界，则这个陆地单元格是飞地。因此可以将所有陆地单元格分成两类：第一类陆地单元格和网格边界相连，这些陆地单元格不是飞地；第二类陆地单元格不和网格边界相连，这些陆地单元格是飞地。
+
+我们可以从网格边界上的每个陆地单元格开始深度优先搜索，遍历完边界之后，所有和网格边界相连的陆地单元格就都被访问过了。然后遍历整个网格，如果网格中的一个陆地单元格没有被访问过，则该陆地单元格不和网格的边界相连，是飞地。
+
+代码实现时，由于网格边界上的单元格一定不是飞地，因此遍历网格统计飞地的数量时只需要遍历不在网格边界上的单元格。
+
+```js
+var numEnclaves = function(grid) {
+    const dirs = [[-1, 0], [1, 0], [0, -1], [0, 1]];
+    const m = grid.length;
+    const n = grid[0].length;
+    const visited = new Array(m).fill(0).map(() => new Array(n).fill(false));
+
+    const dfs = (grid, row, col) => {
+        if (row < 0 || row >= m || col < 0 || col >= n || grid[row][col] == 0 || visited[row][col]) {
+            return;
+        }
+        visited[row][col] = true;
+        for (const dir of dirs) {
+            dfs(grid, row + dir[0], col + dir[1]);
+        }
+    };
+
+    for (let i = 0; i < m; i++) {
+        dfs(grid, i, 0);
+        dfs(grid, i, n - 1);
+    }
+    for (let j = 1; j < n - 1; j++) {
+        dfs(grid, 0, j);
+        dfs(grid, m - 1, j);
+    }
+    let enclaves = 0;
+    for (let i = 1; i < m - 1; i++) {
+        for (let j = 1; j < n - 1; j++) {
+            if (grid[i][j] === 1 && !visited[i][j]) {
+                enclaves++;
+            }
+        }
+    }
+    return enclaves;
+}
+
+let test=[[0,0,0,0],[1,0,1,0],[0,1,1,0],[0,0,0,0]];
+let result=numEnclaves(test);
+console.log(result);
+```
+
+方法二：广度优先搜索
+也可以通过广度优先搜索判断每个陆地单元格是否和网格边界相连。
+
+首先从网格边界上的每个陆地单元格开始广度优先搜索，访问所有和网格边界相连的陆地单元格，然后遍历整个网格，统计飞地的数量。
+
+```js
+var numEnclaves = function(grid) {
+    const dirs = [[-1, 0], [1, 0], [0, -1], [0, 1]];
+    const m = grid.length;
+    const n = grid[0].length;
+    const visited = new Array(m).fill(0).map(() => new Array(n).fill(false));
+    const queue=[];
+
+    for (let i = 0; i < m; i++) {
+        if (grid[i][0]===1) {
+            visited[i][0]=true;
+            queue.push([i,0]);
+        }
+        if (grid[i][n-1]===1) {
+            visited[i][n-1]=true;
+            queue.push([i,n-1]);
+        }
+    }
+    for (let j = 1; j < n - 1; j++) {
+        if (grid[0][j]===1) {
+            visited[0][j]=true;
+            queue.push([0,j]);
+        }
+        if (grid[m-1][j]===1) {
+            visited[m-1][j]=true;
+            queue.push([m-1,j]);
+        }
+    }
+    while(queue.length){
+        const cell=queue.shift();
+        const currRow=cell[0];
+        const currCol=cell[1];
+        for (const dir of dirs){
+            const nextRow=currRow+dir[0];
+            const nextCol=currCol+dir[1];
+            if (nextRow > 0 && nextRow < m && nextCol >= 0 && nextCol < n && grid[nextRow][nextCol] == 1 && !visited[nextRow][nextCol]) {
+            visited[nextRow][nextCol]=true;
+            queue.push([nextRow,nextCol]);
+        }
+        }
+
+    }
+    let enclaves = 0;
+    for (let i = 1; i < m - 1; i++) {
+        for (let j = 1; j < n - 1; j++) {
+            if (grid[i][j] === 1 && !visited[i][j]) {
+                enclaves++;
+            }
+        }
+    }
+    return enclaves;
+}
+
+let test=[[0,0,0,0],[1,0,1,0],[0,1,1,0],[0,0,0,0]];
+let result=numEnclaves(test);
+console.log(result);
+```
+
+方法三：并查集
+除了深度优先搜索和广度优先搜索的方法以外，也可以使用并查集判断每个陆地单元格是否和网格边界相连。
+
+并查集的核心思想是计算网格中的每个陆地单元格所在的连通分量。对于网格边界上的每个陆地单元格，其所在的连通分量中的所有陆地单元格都不是飞地。如果一个陆地单元格所在的连通分量不同于任何一个网格边界上的陆地单元格所在的连通分量，则该陆地单元格是飞地。
+
+并查集的做法是，遍历整个网格，对于网格中的每个陆地单元格，将其与所有相邻的陆地单元格做合并操作。由于需要判断每个陆地单元格所在的连通分量是否和网格边界相连，因此并查集还需要记录每个单元格是否和网格边界相连的信息，在合并操作时更新该信息。
+
+在遍历网格完成并查集的合并操作之后，再次遍历整个网格，通过并查集中的信息判断每个陆地单元格是否和网格边界相连，统计飞地的数量。
+
+```js
+var numEnclaves = function(grid) {
+    const m = grid.length, n = grid[0].length;
+    const uf = new UnionFind(grid);
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] === 1) {
+                const index = i * n + j;
+                if (j + 1 < n && grid[i][j + 1] === 1) {
+                    uf.union(index, index + 1);
+                }
+                if (i + 1 < m && grid[i + 1][j] === 1) {
+                    uf.union(index, index + n);
+                }
+            }
+        }
+    }
+    let enclaves = 0;
+    for (let i = 1; i < m - 1; i++) {
+        for (let j = 1; j < n - 1; j++) {
+            if (grid[i][j] === 1 && !uf.isOnEdge(i * n + j)) {
+                enclaves++;
+            }
+        }
+    }
+    return enclaves;
+}
+
+class UnionFind {
+    constructor(grid) {
+        const m = grid.length, n = grid[0].length;
+        this.parent = new Array(m * n).fill(0);
+        this.onEdge = new Array(m * n).fill(false);
+        this.rank = new Array(m * n).fill(0);
+        for (let i = 0; i < m; i++) {
+            for (let j = 0; j < n; j++) {
+                if (grid[i][j] === 1) {
+                    const index = i * n + j;
+                    this.parent[index] = index;
+                    if (i === 0 || i === m - 1 || j === 0 || j === n - 1) {
+                        this.onEdge[index] = true;
+                    }
+                }
+            }
+        }
+    }
+
+    find(i) {
+        if (this.parent[i] !== i) {
+            this.parent[i] = this.find(this.parent[i]);
+        }
+        return this.parent[i];
+    }
+
+    union(x, y) {
+        const rootx = this.find(x);
+        const rooty = this.find(y);
+        if (rootx !== rooty) {
+            if (this.rank[rootx] > this.rank[rooty]) {
+                this.parent[rooty] = rootx;
+                this.onEdge[rootx] |= this.onEdge[rooty];
+            } else if (this.rank[rootx] < this.rank[rooty]) {
+                this.parent[rootx] = rooty;
+                this.onEdge[rooty] |= this.onEdge[rootx];
+            } else {
+                this.parent[rooty] = rootx;
+                this.onEdge[rootx] |= this.onEdge[rooty];
+                this.rank[rootx]++;
+            }
+        }
+    }
+
+    isOnEdge(i) {
+        return this.onEdge[this.find(i)];
+    }
+}
+
+```
+
 
 
 ## 1044.最长重复子串
