--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4956,6 +4956,531 @@ let result=addDigits(test);
 console.log(result);
 ```
 
+## 263. 丑数
+
+给你一个整数 n ，请你判断 n 是否为 丑数 。如果是，返回 true ；否则，返回 false 。
+
+丑数 就是只包含质因数 2、3 和/或 5 的正整数。
+
+![判断丑数](E:\pogject\学习笔记\image\leetcode\判断丑数.png)
+
+```js
+/**
+ * @param {number} n
+ * @return {boolean}
+ */
+var isUgly = function(n) {
+    if (n<=0) {
+        return false;
+    }
+    let factors=[2,3,5];
+    for (let f of factors){
+        //对n反复除以2,3,5
+        while(n%f===0){
+            n/=f;
+        }
+    }
+    return n===1;
+};
+
+let test=100;
+let result=isUgly(test);
+console.log(result);
+```
+
+## 268. 丢失的数字
+
+给定一个包含 [0, n] 中 n 个数的数组 nums ，找出 [0, n] 这个范围内没有出现在数组中的那个数。
+提示：
+
+n == nums.length
+1 <= n <= 104
+0 <= nums[i] <= n
+nums 中的所有数字都 独一无二
+
+进阶：你能否实现线性时间复杂度、仅使用额外常数空间的算法解决此问题?
+
+数学方法
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var missingNumber = function(nums) {
+    let n=nums.length;
+    let sum=n*(n+1)/2;
+    for (let i=0;i<n;i++){
+        sum-=nums[i];
+    }
+    return sum;
+};
+
+let test=[9,6,4,2,3,5,7,0,1];
+let result=missingNumber(test);
+console.log(result);
+```
+
+排序
+
+将数组排序之后，即可根据数组中每个下标处的元素是否和下标相等，得到丢失的数字。
+
+```js
+var missingNumber = function(nums) {
+    nums.sort((a, b) => a - b);
+    const n = nums.length;
+    for (let i = 0; i < n; i++) {
+        if (nums[i] !== i) {
+            return i;
+        }
+    }
+    return n;
+};
+
+```
+
+哈希集合
+
+使用哈希集合，可以将时间复杂度降低到 O(n)*O*(*n*)。
+
+```js
+var missingNumber = function(nums) {
+    const set = new Set();
+    const n = nums.length;
+    for (let i = 0; i < n; i++) {
+        set.add(nums[i]);
+    }
+    let missing = -1;
+    for (let i = 0; i <= n; i++) {
+        if (!set.has(i)) {
+            missing = i;
+            break;
+        }
+    }
+    return missing;
+};
+
+```
+
+位运算
+
+```js
+var missingNumber = function(nums) {
+    let xor = 0;
+    const n = nums.length;
+    for (let i = 0; i < nums.length; i++) {
+        xor ^= nums[i];
+    }
+    for (let i = 0; i <= n; i++) {
+        xor ^= i;
+    }
+    return xor;
+};
+
+```
+
+## 278. 第一个错误的版本
+
+你是产品经理，目前正在带领一个团队开发新的产品。不幸的是，你的产品的最新版本没有通过质量检测。由于每个版本都是基于之前的版本开发的，所以错误的版本之后的所有版本都是错的。
+
+假设你有 n 个版本 [1, 2, ..., n]，你想找出导致之后所有版本出错的第一个错误的版本。
+
+你可以通过调用 bool isBadVersion(version) 接口来判断版本号 version 是否在单元测试中出错。实现一个函数来查找第一个错误的版本。你应该尽量减少对调用 API 的次数。
+
+ 
+
+提示：
+
+1 <= bad <= n <= 231 - 1
+
+```js
+/**
+ * Definition for isBadVersion()
+ * 
+ * @param {integer} version number
+ * @return {boolean} whether the version is bad
+ * isBadVersion = function(version) {
+ *     ...
+ * };
+ */
+
+/**
+ * @param {function} isBadVersion()
+ * @return {function}
+ */
+var solution = function(isBadVersion) {
+    /**
+     * @param {integer} n Total versions
+     * @return {integer} The first bad version
+     */
+    return function(n) {
+        let left=1;
+        let right=n;
+        while(left<right){
+             let mid = Math.floor(left + (right - left) / 2); // 防止计算时溢出
+            if (isBadVersion(mid)) {
+                right=mid;
+            }else{
+                left=mid+1;
+            }
+        }
+        return left;
+    };
+};
+
+```
+
+
+
+## 283. 移动零
+
+给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
+
+**说明**:
+
+1. 必须在原数组上操作，不能拷贝额外的数组。
+2. 尽量减少操作次数。
+
+```
+输入: [0,1,0,3,12]
+输出: [1,3,12,0,0]
+```
+
+双指针
+
+使用双指针，左指针指向当前已经处理好的序列的尾部，右指针指向待处理序列的头部。
+
+右指针不断向右移动，每次右指针指向非零数，则将左右指针对应的数交换，同时左指针右移。
+
+注意到以下性质：
+
+1. 左指针左边均为非零数；
+2. 右指针左边直到左指针处均为零。
+
+因此每次交换，都是将左指针的零与右指针的非零数交换，且非零数的相对顺序并未改变。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
+ */
+var moveZeroes = function(nums) {
+    let flag1=nums.length-1;  //标识最后的最后一个非0的位置
+    for (let i=nums.length-1;i>=0;i--) {
+        if (nums[i]===0) {
+            if (i!==flag1) {
+                for (let j=i;j<flag1;j++){
+                    nums[j]=nums[j+1];
+                }
+                nums[flag1]=0;
+                flag1--;
+            }else{
+                flag1--;
+            }
+        }
+    }
+    return nums;
+};
+
+let str1 = [2, 4, 0, 5, 0,5, 0, 9,0];
+let result=moveZeroes(str1);
+//console.log(typeof result);
+console.log(result);
+
+```
+
+## 190. 单词规律
+
+给定一种规律 pattern 和一个字符串 str ，判断 str 是否遵循相同的规律。
+
+这里的 遵循 指完全匹配，例如， pattern 里的每个字母和字符串 str 中的每个非空单词之间存在着双向连接的对应规律。
+
+说明:
+你可以假设 pattern 只包含小写字母， str 包含了由单个空格分隔的小写字母。    
+
+```js
+/**
+ * @param {string} pattern
+ * @param {string} s
+ * @return {boolean}
+ */
+var wordPattern = function(pattern, s) {
+    s=s.split(" ");
+    if (pattern.length!==s.length) {
+        return false;
+    }
+    let m1=new Map();
+    let m2=new Map();
+    for(let i=0;i<pattern.length;i++){
+        if(m1.has(pattern[i])){
+            if (m1.get(pattern[i])!==s[i]) {
+                return false;
+            }
+        }else{
+            m1.set(pattern[i],s[i]);
+        }
+        if(m2.has(s[i])){
+            if (m2.get(s[i])!==pattern[i]) {
+                return false;
+            }
+        }else{
+            m2.set(s[i],pattern[i]);
+        }
+    }
+    return true;
+};
+
+let test="dog cat cat fish";
+let result=wordPattern("abba",test);
+console.log(result);
+```
+
+## 292. Nim 游戏
+
+你和你的朋友，两个人一起玩 Nim 游戏：
+
+桌子上有一堆石头。
+你们轮流进行自己的回合， 你作为先手 。
+每一回合，轮到的人拿掉 1 - 3 块石头。
+拿掉最后一块石头的人就是获胜者。
+假设你们每一步都是最优解。请编写一个函数，来判断你是否可以在给定石头数量为 n 的情况下赢得游戏。如果可以赢，返回 true；否则，返回 false 。
+
+提示：
+
+1 <= n <= 231 - 1
+
+```js
+/**
+ * @param {number} n
+ * @return {boolean}
+ */
+var canWinNim = function(n) {
+    return n%4!==0;
+};
+
+let test=5;
+let result=canWinNim(test);
+console.log(result);
+```
+
+## 303. 区域和检索 - 数组不可变
+
+给定一个整数数组  nums，处理以下类型的多个查询:
+
+计算索引 left 和 right （包含 left 和 right）之间的 nums 元素的 和 ，其中 left <= right
+实现 NumArray 类：
+
+NumArray(int[] nums) 使用数组 nums 初始化对象
+int sumRange(int i, int j) 返回数组 nums 中索引 left 和 right 之间的元素的 总和 ，包含 left 和 right 两点（也就是 nums[left] + nums[left + 1] + ... + nums[right] )
+
+提示：
+
+0 <= nums.length <= 104
+-105 <= nums[i] <= 105
+0 <= i <= j < nums.length
+最多调用 104 次 sumRange 方法
+
+```js
+/**
+ * @param {number[]} nums
+ */
+var NumArray = function(nums) {
+    this.nums=nums;
+};
+
+/** 
+ * @param {number} left 
+ * @param {number} right
+ * @return {number}
+ */
+NumArray.prototype.sumRange = function(left, right) {
+    let sum=this.nums[right];
+    for (let i=left;i<right;i++){
+        sum+=this.nums[i];
+    }
+    return sum;
+};
+
+/**
+ * Your NumArray object will be instantiated and called as such:
+ * var obj = new NumArray(nums)
+ * var param_1 = obj.sumRange(left,right)
+ */
+
+```
+
+```js
+/**
+ * @param {number[]} nums
+ */
+var NumArray = function(nums) {
+    let n=nums.length;
+    this.sums=new Array(n+1).fill(0); //前n个数的和
+    for (let i=0;i<n;i++){
+        this.sums[i+1]=this.sums[i]+nums[i];
+    }
+};
+
+/** 
+ * @param {number} left 
+ * @param {number} right
+ * @return {number}
+ */
+NumArray.prototype.sumRange = function(left, right) {
+    return this.sums[right+1]-this.sums[left];
+};
+
+/**
+ * Your NumArray object will be instantiated and called as such:
+ * var obj = new NumArray(nums)
+ * var param_1 = obj.sumRange(left,right)
+ */
+
+```
+
+## 326. 3 的幂
+
+给定一个整数，写一个函数来判断它是否是 3 的幂次方。如果是，返回 true ；否则，返回 false 。
+
+整数 n 是 3 的幂次方需满足：存在整数 x 使得 n == 3x
+
+进阶：你能不使用循环或者递归来完成本题吗？
+
+```js
+/**
+ * @param {number} n
+ * @return {boolean}
+ */
+var isPowerOfThree = function(n) {
+    if (n<=0) {
+        return false;
+    }
+    if (n%3!==0 && n!==1) {
+        return false;
+    }
+    while(n>1){
+        n/=3;
+    }
+    return n===1;
+};
+
+let test=81;
+let result=isPowerOfThree(test);
+console.log(result);
+```
+
+```
+
+```
+
+## 338. 比特位计数
+
+给你一个整数 n ，对于 0 <= i <= n 中的每个 i ，计算其二进制表示中 1 的个数 ，返回一个长度为 n + 1 的数组 ans 作为答案。
+提示：
+
+0 <= n <= 105
+
+
+进阶：
+
+很容易就能实现时间复杂度为 O(n log n) 的解决方案，你可以在线性时间复杂度 O(n) 内用一趟扫描解决此问题吗？
+你能不使用任何内置函数解决此问题吗？（如，C++ 中的 __builtin_popcount ）
+
+**提示：**
+
+- `0 <= n <= 105`
+
+```js
+/**
+ * @param {number} n
+ * @return {number[]}
+ */
+var countBits = function(n) {
+    let result=[0];
+    let len=1;
+    while(n>0){
+        len=result.length < n ? result.length : n;
+        for(let i=0;i<len;i++){
+            result.push(1+result[i])
+        }
+        n=n-len;
+    }
+    //console.log(result);
+    return result;
+};
+
+for(let i=0;i<=64;i++){
+    let result=countBits(i);
+    console.log(i,result[i]);
+}
+
+```
+
+Brian Kernighan 算法
+
+```js
+var countBits = function(n) {
+    const bits = new Array(n + 1).fill(0);
+    for (let i = 0; i <= n; i++) {
+        bits[i] = countOnes(i);
+    }
+    return bits
+};
+
+const countOnes = (x) => {
+    let ones = 0;
+    while (x > 0) {
+        x &= (x - 1);
+        ones++;
+    }
+    return ones;
+}
+
+```
+
+动态规划——最高有效位
+
+```js
+var countBits = function(n) {
+    const bits = new Array(n + 1).fill(0);
+    let highBit = 0;
+    for (let i = 1; i <= n; i++) {
+        if ((i & (i - 1)) == 0) {
+            highBit = i;
+        }
+        bits[i] = bits[i - highBit] + 1;
+    }
+    return bits;
+};
+
+```
+
+动态规划——最低有效位
+
+```js
+var countBits = function(n) {
+    const bits = new Array(n + 1).fill(0);
+    for (let i = 1; i <= n; i++) {
+        bits[i] = bits[i >> 1] + (i & 1);
+    }
+    return bits;
+};
+```
+
+动态规划——最低设置位
+
+```js
+var countBits = function(n) {
+    const bits = new Array(n + 1).fill(0);
+    for (let i = 1; i <= n; i++) {
+        bits[i] = bits[i & (i - 1)] + 1;
+    }
+    return bits;
+};
+```
+
 
 
 ## 306.累加数
@@ -6462,6 +6987,48 @@ var dayOfTheWeek = function(day, month, year) {
 let result=dayOfTheWeek(31,8,2019);
 console.log(result);
 ```
+
+## 1189. “气球” 的最大数量
+
+给你一个字符串 text，你需要使用 text 中的字母来拼凑尽可能多的单词 "balloon"（气球）。
+
+字符串 text 中的每个字母最多只能被使用一次。请你返回最多可以拼凑出多少个单词 "balloon"。
+
+提示：
+
+1 <= text.length <= 10^4
+text 全部由小写英文字母组成
+
+```js
+/**
+ * @param {string} text
+ * @return {number}
+ */
+var maxNumberOfBalloons = function(text) {
+    let m=new Map([["b",0],["a",0],["l",0],["o",0],["n",0]]);
+    for(let i=0;i<text.length;i++){
+        if (m.has(text[i])) {
+            m.set(text[i],m.get(text[i])+1);
+        }
+    }
+    let minNum=text.length;
+    m.forEach((v,k)=>{
+        if (k==="l" || k==="o") {
+            minNum=Math.min(minNum,v>>1);
+        }else{
+            minNum=Math.min(minNum,v);
+        }
+    });
+    return minNum;
+};
+
+
+let test="loonbalxballpoon";
+let result=maxNumberOfBalloons(test);
+console.log(result);
+```
+
+
 
 ## 1219. 黄金矿工
 
