--- a/学习记录.md
+++ b/学习记录.md
@@ -106,4 +106,9 @@ axios , js文件读取
 
 2022.02.12
 
-力扣：飞地的数量(深度、广度优先遍历，并查集)
+力扣：飞地的数量(深度、广度优先遍历，并查集)，丑数，丢失的数字
+
+2022.02.13
+
+力扣：“气球” 的最大数量(计数)，第一个错误的版本(二分查找)，单词规律(hashmap)，Nim 游戏，区域和检索 - 数组不可变(前缀和)，3 的幂，比特位计数，
+
