--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -5340,6 +5340,61 @@ NumArray.prototype.sumRange = function(left, right) {
 
 ```
 
+## 306.累加数
+
+累加数 是一个字符串，组成它的数字可以形成累加序列。
+
+一个有效的 累加序列 必须 至少 包含 3 个数。除了最开始的两个数以外，字符串中的其他数都等于它之前两个数相加的和。
+
+给你一个只包含数字 '0'-'9' 的字符串，编写一个算法来判断给定输入是否是 累加数 。如果是，返回 true ；否则，返回 false 。
+
+说明：累加序列里的数 不会 以 0 开头，所以不会出现 1, 2, 03 或者 1, 02, 3 的情况。
+
+提示：
+
+1 <= num.length <= 35
+num 仅由数字（0 - 9）组成
+
+进阶：你计划如何处理由过大的整数输入导致的溢出?
+
+```
+/**
+ * @param {string} num
+ * @return {boolean}
+ */
+var isAdditiveNumber = function(num) {
+    if (num.length<3) {
+        //累加数至少3位才行
+        return false;
+    }
+    let len=num.length;
+    let i=0,j=1,k=2;
+    let a,b;
+    let sumab;
+    while(i<len){
+        a=Number(num.slice(0,i));
+        while(j<len-Math.max(j-i,i)){
+            b=Number(num.slice(i,j));
+            while(k<len-Math.max(j-i,i)){
+                c=(a+b).toString();
+                if (num.indexOf(c)!==k) {
+
+                }
+            }
+            
+            
+        }
+    }
+    return false;
+};
+
+let test= "199100199";
+let result=isAdditiveNumber(test);
+console.log(result);
+```
+
+## 
+
 ## 326. 3 的幂
 
 给定一个整数，写一个函数来判断它是否是 3 的幂次方。如果是，返回 true ；否则，返回 false 。
@@ -5374,6 +5429,107 @@ console.log(result);
 ```
 
 ```
+
+## 334.递增的三元子序列
+
+给你一个整数数组 nums ，判断这个数组中是否存在长度为 3 的递增子序列。
+
+如果存在这样的三元组下标 (i, j, k) 且满足 i < j < k ，使得 nums[i] < nums[j] < nums[k] ，返回 true ；否则，返回 false 。
+
+提示：
+
+1 <= nums.length <= 5 * 105
+-231 <= nums[i] <= 231 - 1
+
+**进阶：**你能实现时间复杂度为 `O(n)` ，空间复杂度为 `O(1)` 的解决方案吗？
+
+暴力解法，超时
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {boolean}
+ */
+var increasingTriplet = function(nums) {
+    if (nums.length<3) {
+        return false;
+    }
+    let flag=0;
+    let i;
+    for (let i=0;i<nums.length-2;){
+        for (let j=i+1;j<nums.length-1;j++){
+            if (nums[i]<nums[j]) {
+                for (let k=j+1;k<nums.length;k++){
+                    if (nums[j]<nums[k]) {
+                        return true;
+                    }
+                }
+            }
+            
+        }
+    }
+    return false;
+};
+
+let test=[2,1,5,0,4,6];
+let result=increasingTriplet(test);
+console.log(result);
+```
+
+找到局部最小最大值
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {boolean}
+ */
+var increasingTriplet = function(nums) {
+    if (nums.length<3) {
+        return false;
+    }
+    let min=nums[0]<nums[1] ? nums[0] : nums[1];  //局部最小在第一个与第二个开始计算
+    let max=nums[1];  //局部最大值从第二个值开始计算
+    for (let i=2;i<nums.length;i++){
+        if (min<max) {
+            //如果已经找到max>min
+            if (nums[i]>max) {
+                //如果当前值大于max,则满足题意条件
+                return true;
+            }else{
+                //如果不满足
+                if (nums[i]<=min) {
+                    //如果当前值比min小，就把min设为当前值
+                    min=nums[i];
+                }else{
+                    //如果当前值比min大，把max设为当前值，
+                    max=nums[i];
+                }
+            }
+        }else{
+            //当min>max时，从第二个开始值都不大于前面的时候
+            if (nums[i]<=min) {
+                //如果当前值比min小，就把min,max都设为当前值
+                max=nums[i];
+                min=nums[i];
+            }else{
+                //如果当前值比min大，把max设为当前值，后面就会满足max>min了
+                max=nums[i];
+            }
+        }
+    }
+    return false;
+};
+
+let test=[1,0,0,0,0,-1,0,0,0,1000];  //[1,1,-2,6]
+let result=increasingTriplet(test);
+console.log(result);
+```
+
+![递增的三元子序列（双向遍历）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（双向遍历）.png)
+
+![递增的三元子序列（贪心）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（贪心）.png)
+
+## 
 
 ## 338. 比特位计数
 
@@ -5483,157 +5639,39 @@ var countBits = function(n) {
 
 
 
-## 306.累加数
+## 342. 4的幂
 
-累加数 是一个字符串，组成它的数字可以形成累加序列。
+给定一个整数，写一个函数来判断它是否是 4 的幂次方。如果是，返回 true ；否则，返回 false 。
 
-一个有效的 累加序列 必须 至少 包含 3 个数。除了最开始的两个数以外，字符串中的其他数都等于它之前两个数相加的和。
+整数 n 是 4 的幂次方需满足：存在整数 x 使得 n == 4x
 
-给你一个只包含数字 '0'-'9' 的字符串，编写一个算法来判断给定输入是否是 累加数 。如果是，返回 true ；否则，返回 false 。
+**进阶：**你能不使用循环或者递归来完成本题吗？
 
-说明：累加序列里的数 不会 以 0 开头，所以不会出现 1, 2, 03 或者 1, 02, 3 的情况。
-
-提示：
-
-1 <= num.length <= 35
-num 仅由数字（0 - 9）组成
-
-进阶：你计划如何处理由过大的整数输入导致的溢出?
-
-```
-/**
- * @param {string} num
- * @return {boolean}
- */
-var isAdditiveNumber = function(num) {
-    if (num.length<3) {
-        //累加数至少3位才行
-        return false;
-    }
-    let len=num.length;
-    let i=0,j=1,k=2;
-    let a,b;
-    let sumab;
-    while(i<len){
-        a=Number(num.slice(0,i));
-        while(j<len-Math.max(j-i,i)){
-            b=Number(num.slice(i,j));
-            while(k<len-Math.max(j-i,i)){
-                c=(a+b).toString();
-                if (num.indexOf(c)!==k) {
-
-                }
-            }
-            
-            
-        }
-    }
-    return false;
-};
-
-let test= "199100199";
-let result=isAdditiveNumber(test);
-console.log(result);
-```
-
-## 334.递增的三元子序列
-
-给你一个整数数组 nums ，判断这个数组中是否存在长度为 3 的递增子序列。
-
-如果存在这样的三元组下标 (i, j, k) 且满足 i < j < k ，使得 nums[i] < nums[j] < nums[k] ，返回 true ；否则，返回 false 。
-
-提示：
-
-1 <= nums.length <= 5 * 105
--231 <= nums[i] <= 231 - 1
-
-**进阶：**你能实现时间复杂度为 `O(n)` ，空间复杂度为 `O(1)` 的解决方案吗？
-
-暴力解法，超时
+二进制表示中 11 的位置
 
 ```js
 /**
- * @param {number[]} nums
+ * @param {number} n
  * @return {boolean}
  */
-var increasingTriplet = function(nums) {
-    if (nums.length<3) {
-        return false;
-    }
-    let flag=0;
-    let i;
-    for (let i=0;i<nums.length-2;){
-        for (let j=i+1;j<nums.length-1;j++){
-            if (nums[i]<nums[j]) {
-                for (let k=j+1;k<nums.length;k++){
-                    if (nums[j]<nums[k]) {
-                        return true;
-                    }
-                }
-            }
-            
-        }
-    }
-    return false;
+var isPowerOfFour = function(n) {
+    return n>0 && (n&(n-1))===0 && (n&0xaaaaaaaa)===0;
 };
-
-let test=[2,1,5,0,4,6];
-let result=increasingTriplet(test);
-console.log(result);
 ```
 
-找到局部最小最大值
+如果 n 是 4的幂，那么它可以表示成 4^x的形式，我们可以发现它除以 3 的余数一定为 1，
 
 ```js
 /**
- * @param {number[]} nums
+ * @param {number} n
  * @return {boolean}
  */
-var increasingTriplet = function(nums) {
-    if (nums.length<3) {
-        return false;
-    }
-    let min=nums[0]<nums[1] ? nums[0] : nums[1];  //局部最小在第一个与第二个开始计算
-    let max=nums[1];  //局部最大值从第二个值开始计算
-    for (let i=2;i<nums.length;i++){
-        if (min<max) {
-            //如果已经找到max>min
-            if (nums[i]>max) {
-                //如果当前值大于max,则满足题意条件
-                return true;
-            }else{
-                //如果不满足
-                if (nums[i]<=min) {
-                    //如果当前值比min小，就把min设为当前值
-                    min=nums[i];
-                }else{
-                    //如果当前值比min大，把max设为当前值，
-                    max=nums[i];
-                }
-            }
-        }else{
-            //当min>max时，从第二个开始值都不大于前面的时候
-            if (nums[i]<=min) {
-                //如果当前值比min小，就把min,max都设为当前值
-                max=nums[i];
-                min=nums[i];
-            }else{
-                //如果当前值比min大，把max设为当前值，后面就会满足max>min了
-                max=nums[i];
-            }
-        }
-    }
-    return false;
+var isPowerOfFour = function(n) {
+     return n > 0 && (n & (n - 1)) === 0 && n % 3 === 1;
 };
-
-let test=[1,0,0,0,0,-1,0,0,0,1000];  //[1,1,-2,6]
-let result=increasingTriplet(test);
-console.log(result);
 ```
 
-![递增的三元子序列（双向遍历）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（双向遍历）.png)
 
-![递增的三元子序列（贪心）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（贪心）.png)
 
 ## 373.查找和最小的K对数字
 
@@ -6065,6 +6103,46 @@ let str1=121;
 let result=checkPerfectNumber(str1);
 console.log(result);
 ```
+
+## 540. 有序数组中的单一元素
+
+给你一个仅由整数组成的有序数组，其中每个元素都会出现两次，唯有一个数只会出现一次。
+
+请你找出并返回只出现一次的那个数。
+
+你设计的解决方案必须满足 O(log n) 时间复杂度和 O(1) 空间复杂度。
+
+提示:
+
+1 <= nums.length <= 105
+0 <= nums[i] <= 105
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var singleNonDuplicate = function(nums) {
+     //数组长度一定是奇数个
+     let left=0;
+     let right=nums.length-1;
+     while(left<right){
+          let mid=(left+right)>>1;
+          if (nums[mid]===nums[mid^1]) {
+               left=mid+1;
+          }else{
+               right=mid;
+          }
+     }
+     return nums[left];
+};
+
+let test=[3,3,7,7,10,11,11];
+let result=singleNonDuplicate(test);
+console.log(result);
+```
+
+![有序数组中的单一元素（全数组的二分查找）](E:\pogject\学习笔记\image\leetcode\有序数组中的单一元素（全数组的二分查找）.png)
 
 
 
