--- a/学习记录.md
+++ b/学习记录.md
@@ -112,3 +112,6 @@ axios , js文件读取
 
 力扣：“气球” 的最大数量(计数)，第一个错误的版本(二分查找)，单词规律(hashmap)，Nim 游戏，区域和检索 - 数组不可变(前缀和)，3 的幂，比特位计数，
 
+2022.02.13
+
+力扣：4的幂， 有序数组中的单一元素（全数组的二分查找），
