--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7172,6 +7172,61 @@ let result=getMaximumGold(test);
 console.log(result);
 ```
 
+## 1380. 矩阵中的幸运数
+
+给你一个 m * n 的矩阵，矩阵中的数字 各不相同 。请你按 任意 顺序返回矩阵中的所有幸运数。
+
+幸运数是指矩阵中满足同时下列两个条件的元素：
+
+在同一行的所有元素中最小
+在同一列的所有元素中最大
+
+
+提示：
+
+m == mat.length
+n == mat[i].length
+1 <= n, m <= 50
+`1 <= matrix[i][j] <= 10^5`
+矩阵中的所有元素都是不同的
+
+```js
+/**
+ * @param {number[][]} matrix
+ * @return {number[]}
+ */
+var luckyNumbers  = function(matrix) {
+     let m=matrix.length;
+     let n=matrix[0].length;
+     const maxColArr=new Array(n).fill(0);;  //每一列的最大值
+     const minRowArr=new Array(m).fill(0);  //每一行的最大值索引;
+     for(let i=0;i<m;i++){
+          for(let j=0;j<n;j++){
+               maxColArr[j]=Math.max(maxColArr[j],matrix[i][j]);
+               //矩阵中的所有元素都是不同的
+               minRowArr[i]=matrix[i][minRowArr[i]]<matrix[i][j] ? minRowArr[i] : j;
+          }
+     }
+     //console.log(matrix);
+     //console.log(maxColArr);
+     //console.log(minRowArr);
+     let result=[];
+     for (let i=0;i<m;i++){
+          if (matrix[i][minRowArr[i]]===maxColArr[minRowArr[i]]) {
+               result.push(matrix[i][minRowArr[i]]);
+          }
+     }
+     return result;
+
+};
+
+let test=[[1,10,4,2],[9,3,8,7],[15,16,17,12]];
+let result=luckyNumbers(test);
+console.log(result);
+```
+
+
+
 ## 1405. 最长快乐字符串
 
 如果字符串中不含有任何 'aaa'，'bbb' 或 'ccc' 这样的字符串作为子串，那么该字符串就是一个「快乐字符串」。
