--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6040,6 +6040,132 @@ let result=guessNumber(test);
 console.log(result);
 ```
 
+## 383. 赎金信
+
+给你两个字符串：ransomNote 和 magazine ，判断 ransomNote 能不能由 magazine 里面的字符构成。
+
+如果可以，返回 true ；否则返回 false 。
+
+magazine 中的每个字符只能在 ransomNote 中使用一次。
+
+提示：
+
+1 <= ransomNote.length, magazine.length <= 105
+ransomNote 和 magazine 由小写英文字母组成
+
+```js
+/**
+ * @param {string} ransomNote
+ * @param {string} magazine
+ * @return {boolean}
+ */
+var canConstruct = function(ransomNote, magazine) {
+    let m=new Map();
+    for(let i=0;i<magazine.length;i++){
+        m.set(magazine[i],m.has(magazine[i]) ? m.get(magazine[i])+1 : 1);
+    }
+    for(let i=0;i<ransomNote.length;i++){
+        if (m.has(ransomNote[i])) {
+            if (m.get(ransomNote[i])===0) {
+                return false;
+            }else{
+                m.set(ransomNote[i],m.get(ransomNote[i])-1);
+            }
+        }else{
+            return false;
+        }
+    }
+    return true;
+};
+
+
+let test="ab";
+let result=canConstruct("aa",test);
+console.log(result);
+
+```
+
+## 389. 找不同
+
+给定两个字符串 s 和 t ，它们只包含小写字母。
+
+字符串 t 由字符串 s 随机重排，然后在随机位置添加一个字母。
+
+请找出在 t 中被添加的字母。
+提示：
+
+0 <= s.length <= 1000
+t.length == s.length + 1
+s 和 t 只包含小写字母
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {character}
+ */
+var findTheDifference = function(s, t) {
+    if (s.length===0) {
+        return t;  //只有一个字母
+    }
+    let m=new Map();
+    for(let i=0;i<s.length;i++){
+        m.set(s[i],m.has(s[i]) ? m.get(s[i])+1 : 1);
+    }
+    for(let i=0;i<t.length;i++){
+        if (m.has(t[i])) {
+            if (m.get(t[i])===0) {
+                return t[i];
+            }else{
+                m.set(t[i],m.get(t[i])-1);
+            }
+        }else{
+            return t[i];
+        }
+    }
+};
+
+
+let test="ab";
+let result=findTheDifference(test,"acb");
+console.log(result);
+
+```
+
+求和
+
+```js
+var findTheDifference = function(s, t) {
+    let as = 0, at = 0;
+    for (let i = 0; i < s.length; i++) {
+        as += s[i].charCodeAt();
+    }
+    for (let i = 0; i < t.length; i++) {
+        at += t[i].charCodeAt();
+    }
+    return String.fromCharCode(at - as);
+};
+
+```
+
+位运算
+
+如果将两个字符串拼接成一个字符串，则问题转换成求字符串中出现奇数次的字符。使用位运算的技巧解决本题。
+
+```js
+var findTheDifference = function(s, t) {
+    let ret = 0;
+    for (const ch of s) {
+        ret ^= ch.charCodeAt();
+    }
+    for (const ch of t) {
+        ret ^= ch.charCodeAt();
+    }
+    return String.fromCharCode(ret);
+};
+
+```
+
 
 
 ## 390. 消除游戏
@@ -6102,6 +6228,115 @@ console.log(lastRemaining(50));
 
 
 - 空间复杂度：O(1)。只需要使用常数的额外空间。
+
+## 392. 判断子序列
+
+给定字符串 s 和 t ，判断 s 是否为 t 的子序列。
+
+字符串的一个子序列是原始字符串删除一些（也可以不删除）字符而不改变剩余字符相对位置形成的新字符串。（例如，"ace"是"abcde"的一个子序列，而"aec"不是）。
+
+进阶：
+
+如果有大量输入的 S，称作 S1, S2, ... , Sk 其中 k >= 10亿，你需要依次检查它们是否为 T 的子序列。在这种情况下，你会怎样改变代码？
+
+致谢：
+
+特别感谢 @pbrother 添加此问题并且创建所有测试用例。
+
+提示：
+
+0 <= s.length <= 100
+0 <= t.length <= 10^4
+两个字符串都只由小写字符组成。
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {boolean}
+ */
+var isSubsequence = function(s, t) {
+    if (s.length===0) {
+        //s为空时一定是
+        return true;
+    }
+    if (s.length===t.length) {
+        return s===t;
+    }
+    if(s.length>t.length){
+        return false;
+    }
+    for (let i=0,j=0;i<s.length;j++){
+        if (s.length-i>t.length-j) {
+            return false;
+        }
+        /*
+        if (j===t.length) {
+            //遍历完t,但s没有遍历完
+            return false;
+        }
+        */
+        if (s[i]===t[j]) {
+            i++;
+        }
+    }
+    return true;
+};
+
+
+let test1="abec";
+let test2="abcde";
+let result=isSubsequence(test1,test2);
+console.log(result);
+
+```
+
+动态规划
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {boolean}
+ */
+var isSubsequence = function(s, t) {
+    let m=t.length;
+    let n=s.length;
+    const f=new Array(m+1);
+    for(let j=0;j<m+1;j++){
+        f[j]=new Array(26).fill(m);
+    }
+
+    //预处理出对于 t 的每一个位置，从该位置开始往后每一个字符第一次出现的位置。
+    for(let i=m-1;i>=0;i--){
+        for(let j=0;j<26;j++){
+            if (t.charCodeAt(i)==="a".charCodeAt()+j) {
+                f[i][j]=i;
+            }else{
+                f[i][j]=f[i+1][j];
+            }
+        }
+    }
+    //console.log(f);
+    let add=0;
+    for(let i=0;i<n;i++){
+        if (f[add][s.charCodeAt(i)-"a".charCodeAt()]===m) {
+            //m表示遍历完t了
+            return false;
+        }
+        add=f[add][s.charCodeAt(i)-"a".charCodeAt()]+1;
+    }
+    return true;
+};
+
+
+let test1="abecd";
+let test2="zxabdeccde";
+let result=isSubsequence(test1,test2);
+console.log(result);
+
+```
+
 
 
 ## 472. 连接词
@@ -6514,6 +6749,45 @@ let str2="cabcabca";
 let result=repeatedStringMatch(str1,str2);
 console.log(result);
 ```
+
+## 688. 骑士在棋盘上的概率
+
+在一个 n x n 的国际象棋棋盘上，一个骑士从单元格 (row, column) 开始，并尝试进行 k 次移动。行和列是 从 0 开始 的，所以左上单元格是 (0,0) ，右下单元格是 (n - 1, n - 1) 。
+
+象棋骑士有8种可能的走法，如下图所示。每次移动在基本方向上是两个单元格，然后在正交方向上是一个单元格。
+
+每次骑士要移动时，它都会随机从8种可能的移动中选择一种(即使棋子会离开棋盘)，然后移动到那里。
+
+骑士继续移动，直到它走了 k 步或离开了棋盘。
+
+返回 骑士在棋盘停止移动后仍留在棋盘上的概率 。
+
+提示:
+
+1 <= n <= 25
+0 <= k <= 100
+0 <= row, column <= n
+
+```
+/**
+ * @param {number} n
+ * @param {number} k
+ * @param {number} row
+ * @param {number} column
+ * @return {number}
+ */
+var knightProbability = function(n, k, row, column) {
+    const dirs=[[-2,1],[-1,2],[1,2],[2,1],[2,-1],[1,-2],[-1,-2],[-2,-1]];
+    
+};
+
+let n = 3, k = 2, row = 0, column = 0;
+let result=knightProbability(n, k, row, column);
+console.log(result);
+
+```
+
+
 
 ## 747.至少是其他数字两倍的最大数
 
