--- a/学习记录.md
+++ b/学习记录.md
@@ -1,3 +1,5 @@
+## 2022一月
+
 2022.01.01
 
 力扣：数组转换（遍历，切片），括号匹配（栈），合并链表（迭代、递归）
@@ -76,6 +78,8 @@ axios , js文件读取
 
 力扣：
 
+## 2022二月
+
 2022.02.05
 
 力扣：黄金矿工（回溯算法）,Excel表列名称 ， 多数元素（计数处理）（后面要看题解）。
@@ -122,4 +126,9 @@ axios , js文件读取
 
 2022.02.16
 
-力扣：重构一棵树的方案数，反转字符串中的元音字母(双指针)，两个数组的交集，有效的完全平方数，
+力扣：重构一棵树的方案数，反转字符串中的元音字母(双指针)，两个数组的交集，有效的完全平方数，猜数字大小，
+
+2022.02.17
+
+力扣：赎金信(hashmap)，找不同(haspmap计数，求和，位运算)，判断子序列(双指针，动态规划)，骑士在棋盘上的概率
+
